--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,31 +1,37 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Dating App</a>
-    <ul *ngIf="accountService.currentUser$ | async" class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Home </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Messages</a>
-      </li>
+    <a class="navbar-brand" routerLink="/">Dating App</a>
+    <ul class="navbar-nav mr-auto">
+      <ng-container *ngIf="accountService.currentUser$ | async">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/members" routerLinkActive="active"
+            >Matches</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/lists" routerLinkActive="active"
+            >Lists</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/messages" routerLinkActive="active"
+            >Messages</a
+          >
+        </li>
+      </ng-container>
     </ul>
 
-    <div *ngIf="accountService.currentUser$ | async"
-      class="dropdown" dropdown>
-      <a class="dropdown-toggle text-light"
-        dropdownToggle>Welcome user</a>
-      <div *dropdownMenu
-        class="dropdown-menu mt-3">
+    <div *ngIf="(accountService.currentUser$ | async) as user" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username | titlecase}}</a>
+      <div *dropdownMenu class="dropdown-menu mt-3">
         <a class="dropdown-item">Edit Profile</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
     </div>
 
-    <form *ngIf="(accountService.currentUser$ | async) === null"
+    <form
+      *ngIf="(accountService.currentUser$ | async) === null"
       #loginForm="ngForm"
       (ngSubmit)="login()"
       autocomplete="off"
@@ -45,7 +51,7 @@
         type="password"
         placeholder="Password"
       />
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+      <button class="btn btn-success my-2 my-sm-0" type="submit">
         Login
       </button>
     </form>
